# MTFLibrary

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  ANALYSIS_AND_ROADMAP.md  API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PERFORMANCE.md  PROFILING_REPORT.md  README.md  benchmark.py  elementary_functions.py  main_script_template.py  manage_backends.py  populate_notebooks.py  profile_em_demo.py  profile_results.txt  profile_results_cpp_order10_dim4_terms20.prof  profile_results_python_order10_dim4_terms20.prof  profile_results_python_order5_dim2_terms15.prof  pyproject.toml  read_profile.py  requirements-demos.txt  run_all_benchmarks.sh  run_all_benchmarks_smaller.sh  run_all_benchmarks_tiny.sh  run_all_demos.py  setup.cfg  setup.py  taylor_function.py  taylor_operations.py  temp_beginner_demo.py  temp_taylor_map_demo.py  test_taylor_functions.py  variables.py
.github/workflows/: python-publish.yml  test.yml
MTFLibrary/: MTFExtended.py  __init__.py  complex_taylor_function.py  elementary_coefficients.py  elementary_functions.py  mtf_cython.c  mtf_cython.cpp  mtf_cython.pyx  taylor_function.py  test_em_library.py  test_mtf_extended.py  test_taylor_functions.py
MTFLibrary/EMLibrary/: biot_savart.py  current_ring.py  plotting.py  straight_wire.py
benchmarks/: PERFORMANCE.md  PERFORMANCE_ANALYSIS.md  PROFILING_REPORT.md  benchmark.py  biot_savart_benchmark.py  latest_benchmark_results.txt  profile_em_demo.py
benchmarks/profiling_results/: calc_mpi_compiled_rank_1.prof  calc_mpi_compiled_rank_3.prof  calc_serial_compiled.prof  calc_serial_compiled.txt  calc_serial_python.prof  calc_serial_python.txt  plotting_compiled.txt  plotting_python.prof  plotting_python.txt
cpp_src/: mtf_ops.cpp
demo/: Field_Plotting_Demo.ipynb  MTFLibrary_Beginner_Demo.ipynb  Magnetic_Field_Calculation_Demo.ipynb  Magnetic_Field_Calculation_Demo.py  dipole_approximation_demo.ipynb  dipole_approximation_demo_executed.ipynb  magtest.py  main_script_template.py  rectangular_loop_demo.ipynb  rectangular_loop_demo_executed.ipynb  solenoid_field_demo.ipynb  solenoid_field_demo_executed.ipynb  straight_wire_demo.ipynb  test_MFT.py  test_integration_fun.py
demo/cosy/: benchmark_MTF.py
demos/: MTFLibrary_Beginner_Demo.ipynb  README.md  mtflib_beginner_demo.ipynb  mtflib_beginner_demo.py  mtflib_demos.ipynb  neval_performance_demo.py  quick_demo.ipynb  quick_start_demo.ipynb  taylor_map_demo.ipynb  taylor_map_demo.nbconvert.ipynb  taylor_map_demo.py
demos/1_beginner/: 0_Quick_Start.ipynb  (+1 more)
docs/: advanced.rst  advanced_topics.rst  api.rst  api_reference.md  conf.py  examples.rst  getting_started.rst  index.rst  mtf_background.md  requirements.txt  taylor_map.rst  theory.rst
precomputed_coefficients_data/: arcsin_coefficients.json  arctan_coefficients.json  arctanh_coefficients.json  cos_coefficients.json  exp_coefficients.json  gaussian_coefficients.json  log_coefficients.json  sqrt_coefficients.json
profiling_results/: calc_mpi_compiled_rank_0.prof  calc_mpi_compiled_rank_0.txt  calc_mpi_compiled_rank_2.prof  calc_serial_compiled.prof  calc_serial_compiled.txt  calc_serial_python.prof  calc_serial_python.txt  plotting_compiled.prof  plotting_compiled.txt  plotting_python.prof  plotting_python.txt
scripts/: generate_coeff_header.py  populate_notebooks.py  profile_mtf.py  run_all_demos.py
tests/: test_core_library.py  test_cpp_backend.py  test_demos.py  test_map_inversion.py  test_mtf_extended.py  test_neval.py  test_serialization.py  test_taylor_map.py  test_zdemos.py
tmp_benchmark/: benchmark.py
tmp_notebooks/: Field_Plotting_Demo.ipynb  dipole_approximation_demo.ipynb  magnetic_field_calculation_demo.ipynb  mtflib_beginner_demo.ipynb  rectangular_loop_demo.ipynb  solenoid_field_demo.ipynb  straight_wire_demo.ipynb  taylor_map_demo.ipynb
(+74 files in other folders)
