[build-system]
requires = ["setuptools>=61.0", "numpy>=1.20", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "mtflib"
version = "1.4.2"
authors = [
    { name="Shashikant Manikonda", email="manikonda@outlook.com" },
]
description = "A library for working with Multivariate Taylor Functions."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "numpy",
    "pandas",
    "jupytext",
]

[project.optional-dependencies]
torch = ["torch"]
test = [
    "pytest",
    "matplotlib",
    "nbconvert",
    "ipykernel",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst_parser",
    "sympy",
]
dev = [
    "mtflib[test,torch,docs]",
    "black",
    "flake8",
    "pre-commit",
]

[project.urls]
"Homepage" = "https://github.com/shashi-manikonda/MTFLibrary"
"Bug Tracker" = "https://github.com/shashi-manikonda/MTFLibrary/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mtflib.backends.cpp" = ["*.hpp"]

[tool.flake8]
max-line-length = 79
ignore = ["E203", "W503", "E501"]
